# Discordant

./: .gitignore  Cargo.toml  README.md
crates/discordant/: Cargo.toml
crates/discordant/src/: main.rs  ui.rs
crates/discordant/src/backend/: backend_message.rs  event_handler.rs  mod.rs
crates/serenity/src/: lib.rs
crates/serenity/src/builder/: edit_profile.rs  execute_webhook.rs
crates/serenity/src/cache/: mod.rs
crates/serenity/src/client/: context.rs  dispatch.rs  event_handler.rs  mod.rs
crates/serenity/src/client/bridge/gateway/: mod.rs  shard_manager.rs  shard_manager_monitor.rs  shard_messenger.rs  shard_queuer.rs  shard_runner.rs
crates/serenity/src/framework/: mod.rs
crates/serenity/src/framework/standard/: configuration.rs  help_commands.rs  mod.rs
crates/serenity/src/framework/standard/parse/: map.rs
crates/serenity/src/framework/standard/structures/: mod.rs
crates/serenity/src/gateway/: shard.rs  ws_client_ext.rs
crates/serenity/src/http/: error.rs  mod.rs  ratelimiting.rs  raw.rs  request.rs
crates/serenity/src/internal/: macros.rs  ws_impl.rs
crates/serenity/src/model/: invite.rs  user.rs
crates/serenity/src/model/channel/: message.rs
crates/serenity/src/model/guild/: audit_log.rs  emoji.rs  mod.rs  role.rs
crates/serenity/src/utils/: mod.rs
src/: backend.rs  main.rs  ui.rs
src/backend/: backend_message.rs  cache.rs
