[package]
name = "discordant"
version = "0.1.0"
authors = ["Kixiron <contact.kixiron@gmail.com>", "Nicolas <abramlujan@gmail.com>"]

edition = "2018"

[dependencies]
dotenv = "0.14.1"
serde_json = "1.0.40"
dashmap = "1.0.3"
libwebp-sys = "0.2.0"
glib = "0.8.1"
cairo-rs  = "0.7.1"
gio = "0.7.0"
gdk = "0.11.0"
crossbeam = "0.7.2"

[dependencies.gdk-pixbuf]
version = "0.7.0"
features = ["v2_32"]

[dependencies.gtk]
version = "0.7.0"
features = ["v3_16"]

[dependencies.futures-preview]
version = "=0.3.0-alpha.17"
features = [
    "async-await",
    "nightly",
    "compat"
]

[dependencies.tokio]
version = "0.2.0-alpha.1"
features = [
    "sync",
]

[dependencies.reqwest]
version = "0.9"
default-features = false
features = ["rustls-tls"]

[dependencies.serenity]
default-features = false
features = [
    "builder",
    "client",
    "gateway",
    "http",
    "model",
    "cache",
    "utils",
    "rustls_backend",
    "voice"
]
git = "https://github.com/Kixiron/serenity"
branch = 'current'