[package]
name = "discordant"
version = "0.1.0"
authors = ["Kixiron <contact.kixiron@gmail.com>", "Nicolas <abramlujan@gmail.com>"]
edition = "2018"

[dependencies]
dotenv = "0.14.1"
serde_json = "1.0.40"
dashmap = "1.0.4"
libwebp-sys = "0.2.0"
glib = "0.8.1"
cairo-rs  = "0.7.1"
gio = "0.7.0"
gdk = "0.11.0"
crossbeam = "0.7.2"

[dependencies.gdk-pixbuf]
version = "0.7.0"
features = ["v2_32"]

[dependencies.gtk]
version = "0.7.0"
features = ["v3_16"]

[dependencies.futures-preview]
version = "=0.3.0-alpha.18"
features = [
    "async-await",
    "nightly",
    "compat"
]

[dependencies.hyper-tls]
git = "https://github.com/hyperium/hyper-tls"
rev = "86f4c00c13c182bf7306b388051b7440684bef71"

[dependencies.tokio]
version = "0.2.0-alpha.4"
features = [
    "sync",
]

[dependencies.hyper]
git = "https://github.com/hyperium/hyper"
features = ["runtime"]
branch = "master"

[dependencies.serenity]
default-features = false
features = [
    "builder",
    "client",
    "gateway",
    "http",
    "model",
    "cache",
    "utils",
    "rustls_backend",
    "voice"
]
path = "../serenity"
